Fixed the footer overflow

--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,12 @@ body{
 .sidebar{
     background-color: rgb(71, 132, 212);
     color: white;
-    height: 110vh;
+    height: 112vh;
 }
 
 .main{
     background-color: rgb(231, 231, 231);
-    height: 110vh;
+    height: 112vh;
 }
 
 .sidehead{
